--- a/UneContChallenge.Infra.SqlServer/appsettings.Infra.json
+++ b/UneContChallenge.Infra.SqlServer/appsettings.Infra.json
@@ -1,11 +1,9 @@
 {
-  "ConnectionStrings": {
-    "UneContSettings": "Data Source=localhost\\SQLEXPRESS;Integrated Security=True;Encrypt=False"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
